--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
 </head>
 <body class2="d-flex flex-column h-100" class="ps-md-sbwidth bg-light">
 <nav id="sidebar" class="sidebar offcanvas-start offcanvas-md" tabindex="-1">
-  <div class="offcanvas-header border-bottom border-secondary border-opacity-25" style="cursor: pointer;">
+  <div class="offcanvas-header border-bottom border-secondary border-opacity-25">
     <div class2="nav nav-item nav-link text-muted me-auto" class="sidebar-brand" style2="padding-left:0;">
       <img
           src="https://tradeaudit.app/assets/images/favicon.png"
