--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,29 +74,31 @@
     <button type="button" class="btn-close d-md-none" data-bs-dismiss="offcanvas" aria-label="Close"
             data-bs-target="#sidebar"></button>
   </div>
-  <div class="offcanvas-body card" style="padding:0;border:none;">
-    {% for nav in site.navigation %}
-    <div class="card-body">
-      <ul class="sidebar-nav nav-pills">
-        <li class="mt-3">
-          <h6 class="sidebar-header">{{ nav.label }}</h6>
-        </li>
-        <li>
-          <hr class="sidebar-divider">
-        </li>
-        {% for navitem in nav.links %}
-          {% if navitem.url == page.permalink %}
-            {% assign active = "active" %}
-          {% else %}
-            {% assign active = "" %}
-          {% endif %}
-          <li class="nav-item">
-            <a class="nav-link {{ active }}" href="{{ navitem.url }}">{{ navitem.label }}</a>
+  <div class="offcanvas-body">
+    <div class="card" style="padding:0;border:none;">
+      {% for nav in site.navigation %}
+      <div class="card-body">
+        <ul class="sidebar-nav nav-pills">
+          <li class="mt-3">
+            <h6 class="sidebar-header">{{ nav.label }}</h6>
           </li>
-        {% endfor %}
-      </ul>
+          <li>
+            <hr class="sidebar-divider">
+          </li>
+          {% for navitem in nav.links %}
+            {% if navitem.url == page.permalink %}
+              {% assign active = "active" %}
+            {% else %}
+              {% assign active = "" %}
+            {% endif %}
+            <li class="nav-item">
+              <a class="nav-link {{ active }}" href="{{ navitem.url }}">{{ navitem.label }}</a>
+            </li>
+          {% endfor %}
+        </ul>
+      </div>
+      {% endfor %}
     </div>
-    {% endfor %}
     <a href="https://play.google.com/store/apps/details?id=app.tradeaudit"
        target="_blank"
        style="margin-left: auto;margin-right: auto;margin-top: auto;"
