--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -329,9 +329,12 @@
   </div>
 </main>
 
-<footer class="border-top footer mt-auto" style="font-size:16pt">
-  <div class="container-xl d-flex flex-wrap me-auto">
-    <a href="/" class="nav nav-item nav-link text-muted me-auto" style="padding-left:0;">
+<footer class="border-top footer mt-auto" style="text-align:center">
+  <div class="container-xl d-flex flex-wrap me-auto" style="justify-content: center;">
+    <div style="margin-right: auto;padding-top: 10pt;font-size:16pt;" class="nav me-auto fw-bold">
+      See how your favourite social media influencers rank on real world performance.
+    </div>
+    <!--<a href="/" class="nav nav-item nav-link text-muted me-auto" style="padding-left:0;">
       <img src="https://tradeaudit.app/assets/images/favicon.ico" title="{{ site.title }}" alt="{{ site.title }}"
            width="48" height="48">
       <div style="display: inline-block;line-height: 10px;vertical-align: middle;">
@@ -339,7 +342,7 @@
         <span
             style="font-size: small;line-height: 10px;">&copy; 2022-{{ site.time | date: '%Y' }} {{ site.author }}.</span>
       </div>
-    </a>
+    </a>-->
 
     <a href="https://play.google.com/store/apps/details?id=app.tradeaudit"
        target="_blank" class="nav text-end"
