--- a/_includes/integrations.html
+++ b/_includes/integrations.html
@@ -77,9 +77,9 @@
                 {% if active_x == "" %}</a>{% endif %}
             </td>
             <td class="{{ active_url }}">
-                {% if active_url == "" %}<a href="/urls">{% endif %}
+                {% if active_url == "" %}<a href="/webpages">{% endif %}
                     <h3>Any Webpage</h3>
-                    <div><img src="/assets/influencer-url.svg" style="width:180px;margin-top:-10px;" alt="URLs"></div>
+                    <div><img src="/assets/influencer-webpages.svg" style="width:180px;margin-top:-10px;" alt="Web Pages"></div>
                     <ul>
                         <li>Open Graph Import</li>
                     </ul>
