--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,9 +34,9 @@
     gtag('config', '{{ site.analytics.google.tracking_id }}');
   </script>
   <style>
-    /*.navbar {
-      --bs-navbar-padding-y: none;
-    }*/
+    :root {
+      --bs-primary: rgb(104, 66, 207);
+    }
     /*
     .bg-body { background-color: #f9f7ed !important; }
     a { color: #1d9bf0; }
