--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,11 @@
     :root {
       --bs-primary: rgb(104, 66, 207);
     }
+    .nav-link {
+      margin-top: 2px;
+      margin-bottom: 2px;
+      background-color: var(--bs-btn-bg);
+    }
     /*
     .bg-body { background-color: #f9f7ed !important; }
     a { color: #1d9bf0; }
