--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,12 +43,13 @@
       margin-top: 2px;
       margin-bottom: 2px;
       border: 1px solid #6c757d;
+      padding-left: 10px;
     }
     .nav-link:hover {
       background-color: #ed2c8a;
       color: white;
     }
-    .nav-link.active {
+    .sidebar-nav .nav-link.active {
       background-color: rgb(104, 66, 207);
       color: #6c757d;
     }
