--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,8 @@
       --bs-primary: rgb(104, 66, 207);
       --bs-nav-link-padding-x: 10px;
       --bs-sidebar-active-color: white;
+      --bs-sidebar-header-font-weight: bold;
+      --bs-sidebar-header-font-size: larger;
     }
     .nav-link {
       margin-top: 2px;
@@ -51,7 +53,7 @@
     }
     .sidebar-nav .nav-link.active {
       background-color: rgb(104, 66, 207);
-      color: #6c757d;
+      color: white;
     }
     /*
     .bg-body { background-color: #f9f7ed !important; }
