--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,9 +51,16 @@
       background-color: #ed2c8a;
       color: white;
     }
+    .sidebar-brand, .sidebar-brand:hover {
+      color: white;
+      font-weight: bolder;
+    }
     .sidebar-nav .nav-link.active {
       background-color: rgb(104, 66, 207);
       color: white;
+    }
+    .bg-light {
+      background-color: #282739 !important;
     }
     /*
     .bg-body { background-color: #f9f7ed !important; }
@@ -347,9 +354,9 @@
   </div>
 </main>
 
-<footer class="border-top footer mt-auto" style="text-align:center">
+<footer class="border-top footer mt-auto" style="text-align:center;color:white;">
   <div class="container-xl d-flex flex-wrap me-auto" style="justify-content: center;">
-    <div style="margin-right: auto;padding-top: 10pt;font-size:16pt;" class="nav me-auto fw-bold">
+    <div style="margin-right: auto;padding-top: 10pt;font-size:16pt;" class="nav me-auto">
       See how your favourite social media influencers rank on real world performance.
     </div>
     <!--<a href="/" class="nav nav-item nav-link text-muted me-auto" style="padding-left:0;">
