--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,8 +52,8 @@
       color: white;
     }
     .sidebar-brand, .sidebar-brand:hover, navbar-brand {
-      color: white;
-      font-weight: bolder;
+      color: white !important;
+      font-weight: bolder !important;
     }
     .sidebar-nav .nav-link.active {
       background-color: rgb(104, 66, 207);
