--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,8 +52,8 @@
       color: white;
     }
     .sidebar-brand, .sidebar-brand:hover, navbar-brand {
-      color: white !important;
-      font-weight: bolder !important;
+      color: white;
+      font-weight: bolder;
     }
     .sidebar-nav .nav-link.active {
       background-color: rgb(104, 66, 207);
@@ -143,7 +143,7 @@
         <i class="fa-solid fa-moon" aria-hidden="true"></i>
       </button>
     </div>-->
-    <div class="navbar-brand d-flex align-items-center ms-md-0">
+    <div class="navbar-brand d-flex align-items-center ms-md-0" style="color:white;font-weight:bolder;">
       <img src="https://tradeaudit.app/assets/images/favicon.png"
            style="border-radius:20%;margin-right: 10px !important;"
            width="32" height="32"
