--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,10 +47,11 @@
       border: 1px solid #6c757d;
       padding-left: 10px;
     }
-    .nav-link:hover {
+    .nav-link:hover, .btn:hover {
       background-color: #ed2c8a;
       color: white;
     }
+
     .sidebar-brand, .sidebar-brand:hover, navbar-brand {
       color: white;
       font-weight: bolder;
