--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,6 +60,9 @@
       background-color: rgb(104, 66, 207);
       color: white;
     }
+    .sidebar-header {
+      font-weight: bold;
+    }
     .bg-light {
       background-color: #282739 !important;
     }
