--- a/_includes/integrations.html
+++ b/_includes/integrations.html
@@ -57,7 +57,7 @@
             <td class="{{ active_youtube }}">
                 {% if active_youtube == "" %}<a href="/youtube">{% endif %}
                     <h3>YouTube</h3>
-                    <div><img src="/assets/influencer-youtube.svg" style="width:160px;" alt="YouTube"></div>
+                    <div><img src="/assets/integrations/youtube.svg" style="width:160px;" alt="YouTube"></div>
                     <ul>
                         <li>Social Metrics</li>
                         <li>Video Transcripts</li>
@@ -68,7 +68,7 @@
             <td class="{{ active_x }}">
                 {% if active_x == "" %}<a href="/x">{% endif %}
                     <h3>Twitter</h3>
-                    <div><img src="/assets/influencer-x.svg" style="width:120px;margin-bottom:20px;margin-left:10px;margin-top:24px;" alt="X"></div>
+                    <div><img src="/assets/integrations/x.svg" style="width:120px;margin-bottom:20px;margin-left:10px;margin-top:24px;" alt="X"></div>
                     <ul>
                         <li>Social Metrics</li>
                         <li>$Cash Tag Import</li>
@@ -79,7 +79,7 @@
             <td class="{{ active_url }}">
                 {% if active_url == "" %}<a href="/webpages">{% endif %}
                     <h3>Any Webpage</h3>
-                    <div><img src="/assets/influencer-webpages.svg" style="width:180px;margin-top:-10px;" alt="Web Pages"></div>
+                    <div><img src="/assets/integrations/webpages.svg" style="width:180px;margin-top:-10px;" alt="Web Pages"></div>
                     <ul>
                         <li>Open Graph Import</li>
                     </ul>
