--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,6 +66,10 @@
     .bg-light {
       background-color: #282739 !important;
     }
+    .sidebar-nav .nav-link img {
+      width: 20px;
+      margin-right: 10px;
+    }
     /*
     .bg-body { background-color: #f9f7ed !important; }
     a { color: #1d9bf0; }
