--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -376,7 +376,7 @@
 <footer class="border-top footer mt-auto" style="text-align:center;color:white;">
   <div class="container-xl d-flex flex-wrap me-auto" style="justify-content: center;">
     <div style="margin-right: auto;padding-top: 10pt;font-size:16pt;" class="nav me-auto">
-      See how your favourite social media influencers rank on real world performance.
+      See how your favourite social media influencers rank on real world stock picking performance.
     </div>
     <!--<a href="/" class="nav nav-item nav-link text-muted me-auto" style="padding-left:0;">
       <img src="https://tradeaudit.app/assets/images/favicon.ico" title="{{ site.title }}" alt="{{ site.title }}"
