--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
           integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
           crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.analytics.google.tracking_id }}"></script>
   <script>
@@ -33,56 +34,6 @@
     gtag('js', new Date());
     gtag('config', '{{ site.analytics.google.tracking_id }}');
   </script>
-  <style>
-    :root {
-      --bs-primary: rgb(104, 66, 207);
-      --bs-nav-link-padding-x: 10px;
-      --bs-sidebar-active-color: white;
-      --bs-sidebar-header-font-weight: bold;
-      --bs-sidebar-header-font-size: larger;
-    }
-    .nav-link {
-      margin-top: 2px;
-      margin-bottom: 2px;
-      border: 1px solid #6c757d;
-      padding-left: 10px;
-    }
-    .nav-link:hover, .btn:hover {
-      background-color: #ed2c8a;
-      color: white;
-    }
-
-    .sidebar-brand, .sidebar-brand:hover, navbar-brand {
-      color: white;
-      font-weight: bolder;
-    }
-    .sidebar-nav .nav-link.active {
-      background-color: rgb(104, 66, 207);
-      color: white;
-    }
-    .sidebar-header {
-      font-weight: bold;
-    }
-    .bg-light {
-      background-color: #282739 !important;
-    }
-    .sidebar-nav .nav-link img {
-      width: 20px;
-      margin-right: 10px;
-    }
-    /*
-    .bg-body { background-color: #f9f7ed !important; }
-    a { color: #1d9bf0; }
-    a:hover { color: #ed2c8a; }
-    .btn-primary { --bs-btn-bg: #282739; --bs-btn-border-color: #6c757d; --bs-btn-hover-bg: #ed2c8a; --bs-btn-hover-border-color: #6c757d; }
-    .bg-light { background-color: #282739 !important; }
-    .link-dark { color: #fff !important; }
-    .link-dark:hover { color: #ed2c8a !important; }
-    .text-muted { color: #c7c6cb !important; }
-    a.text-muted:hover { color: #ed2c8a !important; }
-    .nav { --bs-nav-link-padding-y: 0.1rem; }
-    */
-  </style>
 </head>
 <body class2="d-flex flex-column h-100" class="ps-md-sbwidth bg-light">
 <nav id="sidebar" class="sidebar offcanvas-start offcanvas-md bg-light" tabindex="-1">
@@ -153,15 +104,6 @@
 <nav class="navbar navbar-expand-md docs-navbar sticky-top bg-light d-lg-none" style="cursor: context-menu;">
   <div class="container-md px-3 px-sm-4 px-xl-5 py-1 justify-content-start" data-bs-toggle="offcanvas"
        data-bs-target="#sidebar" aria-label="Toggle sidebar">
-    <!--<div class="btn-group me-3">
-      <button type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" class="btn btn-secondary btn-square"
-              aria-label="Toggle sidebar">
-        <i class="fa-light fa-sidebar" aria-hidden="true"></i>
-      </button>
-      <button type="button" class="btn btn-secondary btn-square" aria-label="Toggle dark mode" onclick="toggleDarkMode()">
-        <i class="fa-solid fa-moon" aria-hidden="true"></i>
-      </button>
-    </div>-->
     <div class="navbar-brand d-flex align-items-center ms-md-0" style="color:white;font-weight:bolder;">
       <img src="https://tradeaudit.app/assets/images/favicon.png"
            style="border-radius:20%;margin-right: 10px !important;"
@@ -171,200 +113,9 @@
            class="d-block flex-shrink-0 me-1">
       Trade Audit App
     </div>
-    <!--
-    <div class="d-none d-lg-block text-truncate" style="color: hsla(var(--bs-emphasis-color-hsl), 0.7); letter-spacing: 1px;">
-      <a href="/docs/introduction/" class="simple-link fw-bold">Docs</a>
-      <span class="mx-1">/</span>
-      Components
-      <span class="mx-1">/</span>
-      Sidebar
-    </div>
-    <div class="btn-group ms-auto d-md-none">
-      <div class="btn-group">
-        <button class="btn btn-secondary btn-square position-relative" type="button" data-bs-toggle="dropdown" aria-expanded="false" aria-label="Set core theme" data-bs-auto-close="outside">
-          <i class="fa-light fa-paintbrush" aria-hidden="true"></i>
-
-          <span class="core-theme-indicator d-block position-absolute top-0 start-0 translate-middle z-2" style="width: 12px; height: 12px;">
-						          	<span class="d-block w-100 h-100 bg-primary rounded-circle"></span>
-						        </span>
-          <span class="core-theme-indicator d-block position-absolute top-0 start-0 translate-middle z-1" style="width: 12px; height: 12px;">
-						          	<span class="animate-ping d-block w-100 h-100 bg-primary rounded-circle"></span>
-						        </span>
-
-        </button>
-        <div class="core-picker-dropdown-menu dropdown-menu dropdown-menu-end p-0 specific-w-sm-300" style="right: -30px; width: 18.0625rem;">
-          <div class="p-2">
-            <div class="container-fluid g-0">
-              <div class="row g-2">
-                <div class="core-theme-button col-12">
-                  <input type="radio" name="core-picker-1" value="default" class="btn-check" id="default-core-1" autocomplete="off" onchange="setCore(this);" checked="">
-                  <label class="btn text-start d-block w-100 py-2 px-3" for="default-core-1">
-				<span class="d-flex align-items-center ">
-					<i class="fa-light fa-table-layout specific-w-sm-25 flex-shrink-0" style="width: 20px;" aria-hidden="true"></i>
-					Default
-				</span>
-
-                    <span class="d-block mt-1" style="font-size: var(--bs-font-size-sm); opacity: 0.85;">
-						Classic, inspired by Apple HID.
-					</span>
-
-                  </label>
-                </div>
-                <div class="core-theme-button col-12">
-                  <input type="radio" name="core-picker-1" value="modern" class="btn-check" id="modern-core-1" autocomplete="off" onchange="setCore(this);">
-                  <label class="btn text-start d-block w-100 py-2 px-3" for="modern-core-1">
-				<span class="d-flex align-items-center ">
-					<i class="fa-light fa-browsers specific-w-sm-25 flex-shrink-0" style="width: 20px;" aria-hidden="true"></i>
-					Modern
-				</span>
-
-                    <span class="d-block mt-1" style="font-size: var(--bs-font-size-sm); opacity: 0.85;">
-						Like default, but with slightly more modern design sensibilities, particularly in dark mode.
-					</span>
-
-                  </label>
-                </div>
-                <div class="core-theme-button col-12">
-                  <input type="radio" name="core-picker-1" value="elegant" class="btn-check" id="elegant-core-1" autocomplete="off" onchange="setCore(this);">
-                  <label class="btn text-start d-block w-100 py-2 px-3" for="elegant-core-1">
-				<span class="d-flex align-items-center ">
-					<i class="fa-light fa-list-dropdown specific-w-sm-25 flex-shrink-0" style="width: 20px;" aria-hidden="true"></i>
-					Elegant
-				</span>
-
-                    <span class="d-block mt-1" style="font-size: var(--bs-font-size-sm); opacity: 0.85;">
-						Beautiful and classy, almost Tuftian.
-					</span>
-
-                  </label>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <button class="btn btn-secondary btn-square collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#docs-navbar-collapse" aria-controls="docs-navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="fa-regular fa-bars" aria-hidden="true"></i>
-      </button>
-    </div>
-    <div class="navbar-collapse collapse" id="docs-navbar-collapse" style="">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <span class="font-monospace">v2.0.x</span>
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end mb-3 mb-md-0">
-            <li>
-              <a href="/docs/introduction/" class="dropdown-item d-flex align-items-center active" aria-current="true">
-                <i class="fa-light fa-check flex-shrink-0 specific-w-25" aria-hidden="true"></i>
-                <span class="font-monospace">v2.0.1</span>
-              </a>
-            </li>
-            <li>
-              <a href="https://halfmoonui.pythonanywhere.com" class="dropdown-item d-flex align-items-center" target="_blank" rel="noreferrer">
-                <i class="fa-light fa-external-link flex-shrink-0 specific-w-25" aria-hidden="true"></i>
-                <span class="font-monospace">v1.x.x</span>
-              </a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-      <div class="d-flex align-items-center justify-content-center">
-        <div class="dropdown me-2 d-none d-md-inline-block">
-          <button type="button" class="btn btn-secondary flex-grow-1 d-flex align-items-center flex-nowrap text-start position-relative" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
-            <i class="fa-light fa-paintbrush flex-shrink-0" style="width: 22px;" aria-hidden="true"></i>
-            Theme
-
-            <span class="core-theme-indicator d-block position-absolute top-0 start-0 translate-middle z-2" style="width: 12px; height: 12px;">
-							          	<span class="d-block w-100 h-100 bg-primary rounded-circle"></span>
-							        </span>
-            <span class="core-theme-indicator d-block position-absolute top-0 start-0 translate-middle z-1" style="width: 12px; height: 12px;">
-							          	<span class="animate-ping d-block w-100 h-100 bg-primary rounded-circle"></span>
-							        </span>
-
-          </button>
-          <div class="core-picker-dropdown-menu dropdown-menu dropdown-menu-end p-0" style="width: 20rem;">
-            <div class="p-2">
-              <div class="container-fluid g-0">
-                <div class="row g-2">
-                  <div class="core-theme-button col-12">
-                    <input type="radio" name="core-picker-2" value="default" class="btn-check" id="default-core-2" autocomplete="off" onchange="setCore(this);" checked="">
-                    <label class="btn text-start d-block w-100 py-2 px-3" for="default-core-2">
-				<span class="d-flex align-items-center ">
-					<i class="fa-light fa-table-layout specific-w-sm-25 flex-shrink-0" style="width: 20px;" aria-hidden="true"></i>
-					Default
-				</span>
-
-                      <span class="d-block mt-1" style="font-size: var(--bs-font-size-sm); opacity: 0.85;">
-						Classic, inspired by Apple HID.
-					</span>
-
-                    </label>
-                  </div>
-                  <div class="core-theme-button col-12">
-                    <input type="radio" name="core-picker-2" value="modern" class="btn-check" id="modern-core-2" autocomplete="off" onchange="setCore(this);">
-                    <label class="btn text-start d-block w-100 py-2 px-3" for="modern-core-2">
-				<span class="d-flex align-items-center ">
-					<i class="fa-light fa-browsers specific-w-sm-25 flex-shrink-0" style="width: 20px;" aria-hidden="true"></i>
-					Modern
-				</span>
-
-                      <span class="d-block mt-1" style="font-size: var(--bs-font-size-sm); opacity: 0.85;">
-						Like default, but with slightly more modern design sensibilities, particularly in dark mode.
-					</span>
-
-                    </label>
-                  </div>
-                  <div class="core-theme-button col-12">
-                    <input type="radio" name="core-picker-2" value="elegant" class="btn-check" id="elegant-core-2" autocomplete="off" onchange="setCore(this);">
-                    <label class="btn text-start d-block w-100 py-2 px-3" for="elegant-core-2">
-				<span class="d-flex align-items-center ">
-					<i class="fa-light fa-list-dropdown specific-w-sm-25 flex-shrink-0" style="width: 20px;" aria-hidden="true"></i>
-					Elegant
-				</span>
-
-                      <span class="d-block mt-1" style="font-size: var(--bs-font-size-sm); opacity: 0.85;">
-						Beautiful and classy, almost Tuftian.
-					</span>
-
-                    </label>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="btn-group me-1">
-          <a href="https://github.com/halfmoonui/halfmoon" class="btn btn-secondary flex-grow-1 d-flex align-items-center flex-nowrap text-start" target="_blank" rel="noreferrer">
-            <i class="fa-brands fa-github flex-shrink-0" style="width: 20px;" aria-hidden="true"></i>
-            Star
-          </a>
-          <a href="https://github.com/halfmoonui/halfmoon/stargazers" class="btn btn-secondary flex-grow-1 text-nowrap" id="github-stars-count" target="_blank" rel="noreferrer">2,967</a>
-        </div>
-        <a href="/docs/download/" class="btn btn-primary text-nowrap ms-1">Download</a>
-      </div>
-    </div>
-    -->
   </div>
 </nav>
-<!--
-<nav class="navbar navbar-expand-md docs-navbar sticky-top">
-</nav>
-<header>
-  <nav class="py-2 border-bottom">
-    <div class="container-xl d-flex flex-wrap">
-      <a href="/" class="me-auto fs-1 fw-bold text-decoration-none link-dark">
-        <img src="https://tradeaudit.app/assets/images/favicon.png" style="border-radius:20%;"
-             width="60" height="60" title="{{ site.title }}" alt="{{ site.title }}">
-        <span style="font-size: 36pt !important;vertical-align: middle;">{{ site.title }}</span>
-      </a>
-      <a href="https://play.google.com/store/apps/details?id=app.tradeaudit" target="_blank"><img
-          alt="Get it on Google Play" height="60"
-          src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"></a>
-    </div>
-  </nav>
-</header>
--->
+
 <main class="bg-body" style="flex-grow:1;display:flex;flex-direction:column;">
   <div class="container-xl g-5 my-5" style="flex-grow:1;display:flex;flex-direction:column;">
 
@@ -378,15 +129,6 @@
     <div style="margin-right: auto;padding-top: 10pt;font-size:16pt;" class="nav me-auto">
       See how your favourite social media influencers rank on real world stock picking performance.
     </div>
-    <!--<a href="/" class="nav nav-item nav-link text-muted me-auto" style="padding-left:0;">
-      <img src="https://tradeaudit.app/assets/images/favicon.ico" title="{{ site.title }}" alt="{{ site.title }}"
-           width="48" height="48">
-      <div style="display: inline-block;line-height: 10px;vertical-align: middle;">
-        <span style="line-height:20px;font-weight:600;">{{ site.title }}</span><br>
-        <span
-            style="font-size: small;line-height: 10px;">&copy; 2022-{{ site.time | date: '%Y' }} {{ site.author }}.</span>
-      </div>
-    </a>-->
 
     <a href="https://play.google.com/store/apps/details?id=app.tradeaudit"
        target="_blank" class="nav text-end"
