--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -39,3 +39,11 @@
   width: 20px;
   margin-right: 10px;
 }
+
+.facts > section {
+    border: 1px solid grey;
+    border-radius: 20px;
+    padding: 16px;
+    margin-bottom: 10px;
+    background-color: lightgrey;
+}
