--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -48,7 +48,7 @@ article.facts {
 article.facts section {
     border: 1px solid grey;
     border-radius: 10px;
-    padding: 24px 16px 12px 16px
+    padding: 24px 16px 12px 16px;
     margin-bottom: 10px;
     background-color: lightgrey;
 }
