--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -43,6 +43,10 @@
   height: 20px;
 }
 
+.integration_logo img {
+    height: 40px;
+}
+
 article.facts {
  text-align: center;
  margin-bottom: var(--bs-spacer-5);
