--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -44,7 +44,12 @@
 }
 
 .integration_logo img {
-    height: 40px;
+  height: 40px;
+}
+.integration_logo span {
+  line-height: 40px;
+  font-size: 48px;
+  vertical-align: middle;
 }
 
 article.facts {
