--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -37,18 +37,23 @@
 }
 .sidebar-nav .nav-link img.navitem_icon {
   width: 20px;
-  margin-right: 10px;
+  max-height: 20px;
 }
 .sidebar-nav .nav-link img.navitem_logo {
   height: 20px;
 }
+.sidebar-nav .nav-link span.navitem_text {
+  font-size: 24px;
+  line-height: 20px;
+  vertical-align: middle;
+}
 
 .integration_logo img {
-  height: 40px;
+  height: 36px;
 }
 .integration_logo span {
-  line-height: 40px;
-  font-size: 48px;
+  line-height: 36px;
+  font-size: 42px;
   vertical-align: middle;
 }
 
