--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,7 @@
                         alt="{{ navitem.label | strip_html }}"
                         class="navitem_icon"
                     >
-                    <span class="style="color:{{ navitem.color }};">{{ navitem.label }}</span>
+                    <span class="navitem_text" style="color:{{ navitem.color }};">{{ navitem.label }}</span>
                   {% else %}
                     <img
                         src="{{ navitem.img }}"
