--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -47,7 +47,9 @@
   line-height: 20px;
   vertical-align: middle;
 }
-
+.integration_logo {
+  margin-bottom: 4px;
+}
 .integration_logo img {
   height: 36px;
 }
