--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -49,6 +49,9 @@
 }
 .integration_logo {
   margin-bottom: 4px;
+  min-width: 260px;
+  padding-top: 11px;
+  padding-bottom: 11px;
 }
 .integration_logo img {
   height: 36px;
