--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,7 +14,7 @@
   margin-top: 2px;
   margin-bottom: 2px;
   border: 1px solid #6c757d;
-  padding-left: 10px;
+  text-align: center;
 }
 .nav-link:hover, .btn:hover {
   background-color: #ed2c8a;
