--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="{{ page.viewport | default: 'width=device-width, initial-scale=1' }}">
   <meta name="author" content="{{ site.author }}">
   <meta name="description" content="{{ site.description }}">
   <meta property="og:title" content="{{ page.title }}">
