--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -74,3 +74,10 @@ article.facts section {
     margin-bottom: 10px;
     background-color: lightgrey;
 }
+
+.list-group-item {
+    background-color: antiquewhite;
+}
+.btn-outline-secondary {
+    background-color: white;
+}
