--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,6 +15,7 @@
   margin-bottom: 2px;
   border: 1px solid #6c757d;
   text-align: center;
+  background-color: antiquewhite;
 }
 .nav-link:hover, .btn:hover {
   background-color: #ed2c8a;
