--- a/_includes/influencerlink.html
+++ b/_includes/influencerlink.html
@@ -1,3 +1,3 @@
-<div class="d-grid gap-2 col-10 mx-auto mb-5 mt-3">
-  <a href="/rankings" class="btn btn-primary btn-lg" role="button" style="--bs-btn-font-size:2rem">See the Trade Audit Influencer Rankings</a>
+<div class="mx-auto mb-5 mt-2">
+  <a href="/rankings" class="btn btn-primary btn-lg" role="button" style="--bs-btn-font-size:28px">See the Trade Audit Influencer Rankings</a>
 </div>
