--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -73,5 +73,5 @@ article.facts section {
     border-radius: 10px;
     padding: 24px 16px 12px 16px;
     margin-bottom: 10px;
-    background-color: lightgrey;
+    background-color: antiquewhite;
 }
