--- a/_includes/appstorelink.html
+++ b/_includes/appstorelink.html
@@ -1,7 +1,7 @@
 <div style="flex-grow:1;display:inline-flex;align-self:stretch;">
   <div class="lead" style="text-align:center;text-justify:inter-word;margin:auto">
       <p class="mt-5 fw-bold">
-        See how your favourite social media influencers rank on real world performance.
+        How do your favourite social media influencers rank on real world performance?
       </p>
       <div class="text-center">
         <a href="https://play.google.com/store/apps/details?id=app.tradeaudit" target="_blank"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" height="60"></a>
