--- a/_includes/influencerlink.html
+++ b/_includes/influencerlink.html
@@ -1,6 +1,6 @@
 <h1 class="display-6 fw-bold text-center mt-4">Which influencer trades made money?</h1>
 <div class="mx-auto mb-5 mt-2">
   <a href="/rankings" class="btn btn-primary btn-lg" role="button" style="--bs-btn-font-size:28px">
-    See the Trade Audit influencer Rankings
+    See the Trade Audit Influencer Rankings
   </a>
 </div>
